--- a/ethan/index.html
+++ b/ethan/index.html
@@ -70,6 +70,7 @@ const wavFiles = ["haha.wav",
   "hey baby.wav",
   "mmmm.wav",
   "OH yeah.wav",
+  "hahaha.wav",
   "oh yeahh.wav",
   "open up.wav",
   "right there byatch.wav",
@@ -210,3 +211,4 @@ init();
 </script>
 </body>
 </html>
+
