--- a/ethan/index.html
+++ b/ethan/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>WAV Grid Player — Perfect Squares</title>
+<title>Ethan</title>
 <style>
   :root { --bg: #111; --cell-border: 1px; --cell-padding: 10px; --text: #fff; }
   html,body {
